@@ -1,3 +1,8 @@
+2009-02-11  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/opensubtitles/opensubtitles.py: Added Portuguese to the
+	list of queryable OpenSubtitles languages. (Helps: #571132)
+
 2009-02-10  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/eggfileformatchooser.h: Fixed to use single includes for GTK+.
